--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 	<meta name="x5-fullscreen" content="true">
 	<meta name="x5-page-mode" content="app">
 
+	<!-- 禁止百度自动转码 -->
+	<meta http-equiv="Cache-Control" content="no-siteapp">
+
 	<title>La-Chance</title>
 
 	<!-- css -->
