--- a/design.html
+++ b/design.html
@@ -37,35 +37,21 @@
 	<div id="tech">
 		<header><a href="#"><img src="images/header.png" alt="header"></a></header>
 		<section id="sec-01">
-			<img src="images/technology.png" alt="技术">
-			<div><h2>技术</h2><h4>[Technology]</h4></div>
-			<p>web/app/WeChat 我们用代码为您搭建一个新世界。</p>
+			<img src="images/design.png" alt="设计">
+			<div><h2>设计</h2><h4>[Design]</h4></div>
+			<p>市场，创意，格调，我们在美学的规则中创造新景色</p>
 		</section>
-		<div class="bg-shadow"><img src="images/bg_shadow.png"></div>
-		<section id="sec-02" class="display">
+		<div class="bg-shadow"><img src="images/design_bg_shadow.png"></div>
 
-			<h3>Web</h3>
-			<p>网页设计，企业网站，商城，OA/CRM企业内部系统开发搭建，上线前测试调整，后期跟踪维护。</p>
-			<div class="swiper-bg">
-				<div>
-					<div class="swiper-container" id="swiper-01">
-						<div class="swiper-wrapper">
-							<div class="swiper-slide"><img src="images/tech_sec02_01.jpg"></div>
-							<div class="swiper-slide">Slide 2</div>
-							<div class="swiper-slide">Slide 3</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
 		<section id="sec-03" class="display">
-			<h3>App</h3>
-			<p>UI页面设计，App开发测试，企业内部App开发。</p>
+			<h3>UI</h3>
+			<p>产品项目UI个性定制，人机交互、操作逻辑、界面美观的整体设计，提现产品个性魅力。</p>
+
 			<div class="swiper-bg">
 				<div>
 					<div class="swiper-container" id="swiper-02">
 						<div class="swiper-wrapper">
-							<div class="swiper-slide"><img src="images/tech_sec03_01.jpg"></div>
+							<div class="swiper-slide"><img src="images/design_sec03_01.jpg"></div>
 							<div class="swiper-slide">Slide 2</div>
 							<div class="swiper-slide">Slide 3</div>
 						</div>
@@ -73,14 +59,16 @@
 				</div>
 			</div>
 		</section>
-		<section id="sec-04" class="display">
-			<h3><img src="images/wechat.png" alt="wechat"></h3>
-			<p>微信开发搭建，基于微信平台webapp开发，H5设计开发。</p>
+
+		<section id="sec-02" class="display">
+
+			<h3>VI</h3>
+			<p>专业设计科学的视觉识别系统，是传播企业经营理念、建立企业知名度、帮助塑造企业形象。</p>
 			<div class="swiper-bg">
 				<div>
-					<div class="swiper-container" id="swiper-03">
+					<div class="swiper-container" id="swiper-01">
 						<div class="swiper-wrapper">
-							<div class="swiper-slide"><img src="images/tech_sec04_01.jpg"></div>
+							<div class="swiper-slide"><img src="images/design_sec02_01.jpg"></div>
 							<div class="swiper-slide">Slide 2</div>
 							<div class="swiper-slide">Slide 3</div>
 						</div>
@@ -88,6 +76,8 @@
 				</div>
 			</div>
 		</section>
+
+		<div class="bottom-hack"></div>
 
 
 
@@ -107,11 +97,7 @@
 
 			var $wrapDiv03 = $('#sec-03 .swiper-bg>div');
 			$wrapDiv03.height($wrapDiv03.width()*1.8);
-			$('#sec-03 .swiper-bg').height($wrapDiv03.height()+50);
-
-			var $wrapDiv04 = $('#sec-04 .swiper-bg>div');
-			$wrapDiv04.height($wrapDiv04.width()*1.8);
-			$('#sec-04 .swiper-bg').height($wrapDiv04.height()+90);
+			$('#sec-03 .swiper-bg').height($wrapDiv03.height()+55);
 		});
 		// document.querySelector('body').addEventListener('touchstart', function (ev) {
 		// 	ev.preventDefault();
