--- a/tech.html
+++ b/tech.html
@@ -88,7 +88,7 @@
 			</div>
 		</section>
 
-
+		<div class="bottom-hack"></div>
 
 
 	</div>
@@ -106,15 +106,12 @@
 
 			var $wrapDiv03 = $('#sec-03 .swiper-bg>div');
 			$wrapDiv03.height($wrapDiv03.width()*1.8);
-			$('#sec-03 .swiper-bg').height($wrapDiv03.height()+50);
+			$('#sec-03 .swiper-bg').height($wrapDiv03.height()+55);
 
 			var $wrapDiv04 = $('#sec-04 .swiper-bg>div');
 			$wrapDiv04.height($wrapDiv04.width()*1.8);
-			$('#sec-04 .swiper-bg').height($wrapDiv04.height()+90);
+			$('#sec-04 .swiper-bg').height($wrapDiv04.height()+55);
 		});
-		// document.querySelector('body').addEventListener('touchstart', function (ev) {
-		// 	ev.preventDefault();
-		// });
-</script>
+	</script>
 </body>
 </html>
