add planning page

--- a/design.html
+++ b/design.html
@@ -34,7 +34,7 @@
 	<link rel="stylesheet" href="style/design.css">
 </head>
 <body>
-	<div id="tech">
+	<div id="design">
 		<header><a href="#"><img src="images/header.png" alt="header"></a></header>
 		<section id="sec-01">
 			<img src="images/design.png" alt="设计">
