--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 			</div>
 
 			<div class="technology-01 bigbox"><a href="tech.html"><span>技术</span><img src="images/technology.png" alt="技术"></a></div>
-			<div class="technology-02 smallbox"><a href="tech.html"><img src="images/wechat.png" alt="微信"></a></div>
-			<div class="technology-03 smallbox"><a href="tech.html"><span>Web</span></a></div>
-			<div class="technology-04 smallbox"><a href="tech.html"><span>App</span></a></div>
+			<div class="technology-02 smallbox"><a href="tech.html#sec-04"><img src="images/wechat.png" alt="微信"></a></div>
+			<div class="technology-03 smallbox"><a href="tech.html#sec-02"><span>Web</span></a></div>
+			<div class="technology-04 smallbox"><a href="tech.html#sec-03"><span>App</span></a></div>
 			<div class="design-01 bigbox"><a href="design.html"><span>设计</span><img src="images/design.png" alt="设计"></a></div>
 			<div class="planning-01 bigbox"><a href="planning.html"><span>策划运营</span><img src="images/planning.png" alt="策划"></a></div>
 			<div class="planning-02 smallbox"><a href="planning.html"><span>运营</span></a></div>
