--- a/planning.html
+++ b/planning.html
@@ -22,14 +22,109 @@
 	<meta name="x5-fullscreen" content="true">
 	<meta name="x5-page-mode" content="app">
 
+	<!-- 禁止百度自动转码 -->
+	<meta http-equiv="Cache-Control" content="no-siteapp">
+
 	<title>策划运营</title>
 
 	<!-- css -->
 	<link rel="stylesheet" href="style/normalize.css">
+	<link rel="stylesheet" href="style/base.css">
+	<link rel="stylesheet" href="style/swiper-3.3.0.min.css">
 	<link rel="stylesheet" href="style/planning.css">
 
 </head>
 <body>
-	待开发
+	<div id="planning">
+		<header><a href="#"><img src="images/header.png" alt="header"></a></header>
+		<section id="sec-01">
+			<img src="images/planning.png" alt="策划运营">
+			<div><h2>策划运营</h2><h4>[Design]</h4></div>
+			<p>数据说话，从分析中得出最完美的解决方案，从行动中得到最有效的结果。</p>
+		</section>
+		<div class="bg-shadow"><img src="images/planning_bg_shadow.png"></div>
+
+		<section id="sec-05" class="display">
+
+			<h3>策划</h3>
+			<p>以个性化量身定制开发为基础，结合品牌核心需求，提供功能定制、互动创意、内容运营、媒体传播于一体的新媒体品牌营销服务。为合作客户提供系统、明晰、可行、高效的数字化营销解决方案及落实执行。</p>
+			<div class="additional-bg">
+				<img src="images/planning_sec05_bg.jpg">
+			</div>
+		</section>
+
+		<section id="sec-03" class="display">
+			<h3>运营</h3>
+			<p>依据客户需求，定制运营计划，抓住时事热点，调和平台调性，提高平台用户粘度，打造品牌形象。以创意+技术量身打造平台，并加以执行运营。</p>
+			<div class="swiper-bg">
+				<div>
+					<div class="swiper-container" id="swiper-02">
+						<div class="swiper-wrapper">
+							<div class="swiper-slide"><img src="images/planning_sec03_01.jpg"></div>
+							<div class="swiper-slide">Slide 2</div>
+							<div class="swiper-slide">Slide 3</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section id="sec-02" class="display">
+
+			<h3>投放</h3>
+			<p>最为有效的线上炒作方式为大号投放，通过粉丝基数庞大的大号，将活动影响力扩散至最大。适用于企业品牌宣传，活动召集，系列主题等类型的微信稿件。</p>
+			<div class="swiper-bg">
+				<div>
+					<div class="swiper-container" id="swiper-01">
+						<div class="swiper-wrapper">
+							<div class="swiper-slide"><img src="images/planning_sec02_01.jpg"></div>
+							<div class="swiper-slide">Slide 2</div>
+							<div class="swiper-slide">Slide 3</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section id="sec-04" class="display">
+			<h3>朋友圈</h3>
+			<p>朋友圈广告将会通过微信广告系统进行投放和管 理，广告本身内容将基于微信公众账号生态体系， 以类似朋友的原创内容形式进行展现，在基于微信用户画像进行定向的同时，通过实时社交混排算法，依托关系链进行互动传播。</p>
+			<div class="swiper-bg">
+				<div>
+					<div class="swiper-container" id="swiper-03">
+						<div class="swiper-wrapper">
+							<div class="swiper-slide"><img src="images/planning_sec04_01.jpg"></div>
+							<div class="swiper-slide">Slide 2</div>
+							<div class="swiper-slide">Slide 3</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<div class="bottom-hack"></div>
+
+
+	</div>
+	<script src="scripts/zepto.min.js"></script>
+	<script src="scripts/swiper-3.3.0.jquery.min.js"></script>
+	<script>
+		var mySwiper = new Swiper ('.swiper-container', {
+			loop: true
+		});
+		$(function() {
+			var $wrapDiv02 = $('#sec-02 .swiper-bg>div');
+			$wrapDiv02.height($wrapDiv02.width()*0.59);
+			$('#sec-02 .swiper-bg').height($wrapDiv02.width()*0.59+40);
+
+
+			var $wrapDiv03 = $('#sec-03 .swiper-bg>div');
+			$wrapDiv03.height($wrapDiv03.width()*1.8);
+			$('#sec-03 .swiper-bg').height($wrapDiv03.height()+55);
+
+			var $wrapDiv04 = $('#sec-04 .swiper-bg>div');
+			$wrapDiv04.height($wrapDiv04.width()*1.8);
+			$('#sec-04 .swiper-bg').height($wrapDiv04.height()+55);
+		});
+	</script>
 </body>
 </html>
