add product page

--- a/design.html
+++ b/design.html
@@ -35,7 +35,7 @@
 </head>
 <body>
 	<div id="design">
-		<header><a href="#"><img src="images/header.png" alt="header"></a></header>
+		<header><a href="index.html"><img src="images/header.png" alt="header"></a></header>
 		<section id="sec-01">
 			<img src="images/design.png" alt="设计">
 			<div><h2>设计</h2><h4>[Design]</h4></div>
