--- a/planning.html
+++ b/planning.html
@@ -36,7 +36,7 @@
 </head>
 <body>
 	<div id="planning">
-		<header><a href="#"><img src="images/header.png" alt="header"></a></header>
+		<header><a href="index.html"><img src="images/header.png" alt="header"></a></header>
 		<section id="sec-01">
 			<img src="images/planning.png" alt="策划运营">
 			<div><h2>策划运营</h2><h4>[Design]</h4></div>
