--- a/tech.html
+++ b/tech.html
@@ -34,7 +34,7 @@
 </head>
 <body>
 	<div id="tech">
-		<header><a href="#"><img src="images/header.png" alt="header"></a></header>
+		<header><a href="index.html"><img src="images/header.png" alt="header"></a></header>
 		<section id="sec-01">
 			<img src="images/technology.png" alt="技术">
 			<div><h2>技术</h2><h4>[Technology]</h4></div>
