--- a/product.html
+++ b/product.html
@@ -40,11 +40,6 @@
 			<header><a href="#"><img src="images/header.png" alt="header"></a></header>
 
 			<div class="btn1"><a href="#">案例&nbsp;&nbsp;&&nbsp;&nbsp;合作伙伴</a></div>
-<!-- 			<ul>
-				<li><a href=""><img src="images/product_01.png"></a><a href=""><img src="images/product_01.png"></a></li>
-				<li><a href=""><img src="images/product_01.png"></a><a href=""><img src="images/product_01.png"></a></li>
-			</ul> -->
-
 			<ul>
 				<li><a href=""><img src="images/product_01.png"></a></li>
 				<li><a href=""><img src="images/product_01.png"></a></li>
@@ -56,7 +51,11 @@
 	</div>
 	
 
+<script>
+	window.onload = function () {
+		alert('1');
+	}
+</script>
 
-
-		</body>
-		</html>
+</body>
+</html>
