--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 			<div class="technology-04 smallbox"><a href="tech.html#sec-03"><span>App</span></a></div>
 			<div class="design-01 bigbox"><a href="design.html"><span>设计</span><img src="images/design.png" alt="设计"></a></div>
 			<div class="planning-01 bigbox"><a href="planning.html"><span>策划运营</span><img src="images/planning.png" alt="策划"></a></div>
-			<div class="planning-02 smallbox"><a href="planning.html"><span>运营</span></a></div>
-			<div class="planning-03 smallbox"><a href="planning.html"><span>推广</span></a></div>
+			<div class="planning-02 smallbox"><a href="planning.html#sec-03"><span>运营</span></a></div>
+			<div class="planning-03 smallbox"><a href="planning.html#sec-02"><span>推广</span></a></div>
 
 			<footer><a href="product.html">案例 & 合作伙伴<span></span></a></footer>
 
@@ -70,21 +70,21 @@
 			$('.planning-03').css('left', bigBoxWidth+10);
 			$('.planning-02').css({
 				'left': bigBoxWidth+10,
-				'bottom': 60+smallBoxWidth+5
+				'bottom': 50+smallBoxWidth+5
 			});
-			$('.design-01').css('bottom', 60+bigBoxWidth+5);
-			$('.technology-01').css('bottom', 60+bigBoxWidth*2+10);
+			$('.design-01').css('bottom', 50+bigBoxWidth+5);
+			$('.technology-01').css('bottom', 50+bigBoxWidth*2+10);
 			$('.technology-02').css({
 				'left': bigBoxWidth+10,
-				'bottom': 60+bigBoxWidth*2+smallBoxWidth+15
+				'bottom': 50+bigBoxWidth*2+smallBoxWidth+15
 			});
 			$('.technology-03').css({
 				'left': bigBoxWidth+10,
-				'bottom': 60+bigBoxWidth*2+10
+				'bottom': 50+bigBoxWidth*2+10
 			});
 			$('.technology-04').css({
 				'left': bigBoxWidth+smallBoxWidth+15,
-				'bottom': 60+bigBoxWidth*2+10
+				'bottom': 50+bigBoxWidth*2+10
 			});
 			$('a').tap(function(){
 				window.location.href=this.href;
