--- a/product.html
+++ b/product.html
@@ -41,10 +41,10 @@
 
 			<div class="btn1"><a href="#">案例&nbsp;&nbsp;&&nbsp;&nbsp;合作伙伴</a></div>
 			<ul>
+				<li><a href="http://www.xmniao.com/"><img src="images/product_01.png"></a></li>
+				<li><a href="http://www.jctemai.com/"><img src="images/product_01.png"></a></li>
 				<li><a href=""><img src="images/product_01.png"></a></li>
-				<li><a href=""><img src="images/product_01.png"></a></li>
-				<li><a href=""><img src="images/product_01.png"></a></li>
-				<li><a href=""><img src="images/product_01.png"></a></li>
+				<li><a href="http://www.iabroad.com/"><img src="images/product_01.png"></a></li>
 			</ul>
 			<div class="bg-bottom"><img src="images/product_bg_bottom.jpg"></div>
 		</section>
@@ -53,7 +53,7 @@
 
 <script>
 	window.onload = function () {
-		alert('1');
+		// alert('1');
 	}
 </script>
 
