--- a/index.html
+++ b/index.html
@@ -62,39 +62,26 @@
 	<script>
 		$(function() {
 
-			// 布局
 			var bigBoxWidth = $('.bigbox').width();
 			var smallBoxWidth = (bigBoxWidth-5)/2;
 			$('.bigbox').height(bigBoxWidth);
 			$('.smallbox').width(smallBoxWidth).height(smallBoxWidth);
-			$('.planning-03').css('left', bigBoxWidth+10);
-			$('.planning-02').css({
-				'left': bigBoxWidth+10,
-				'bottom': 50+smallBoxWidth+5
-			});
+			$('.planning-03,.planning-02,.technology-02,.technology-03').css('left', bigBoxWidth+10);
+			$('.planning-02').css('bottom', 50+smallBoxWidth+5);
 			$('.design-01').css('bottom', 50+bigBoxWidth+5);
-			$('.technology-01').css('bottom', 50+bigBoxWidth*2+10);
-			$('.technology-02').css({
-				'left': bigBoxWidth+10,
-				'bottom': 50+bigBoxWidth*2+smallBoxWidth+15
-			});
-			$('.technology-03').css({
-				'left': bigBoxWidth+10,
-				'bottom': 50+bigBoxWidth*2+10
-			});
-			$('.technology-04').css({
-				'left': bigBoxWidth+smallBoxWidth+15,
-				'bottom': 50+bigBoxWidth*2+10
-			});
-			$('a').tap(function(){
-				window.location.href=this.href;
-			})
+			$('.technology-01,.technology-03,.technology-04').css('bottom', 50+bigBoxWidth*2+10);
+			$('.technology-02').css('bottom', 50+bigBoxWidth*2+smallBoxWidth+15);
+			$('.technology-04').css('left', bigBoxWidth+smallBoxWidth+15);
+
 		});
 
 		// 禁止用户拉动页面
-		document.querySelector('body').addEventListener('touchstart', function (ev) {
-			ev.preventDefault();
-		});
+		// document.querySelector('body').addEventListener('touchstart', function (ev) {
+		// 	ev.preventDefault();
+		// });
+		// $('a').tap(function(){
+		// 	window.location.href=this.href;
+		// })
 	</script>
 </body>
 </html>
