--- a/product.html
+++ b/product.html
@@ -31,31 +31,28 @@
 	<link rel="stylesheet" href="style/normalize.css">
 	<link rel="stylesheet" href="style/base.css">
 	<link rel="stylesheet" href="style/product.css">
+	
 </head>
 
 <body>
 	<div id="wrapper">
 		<section id="section1">
 
-			<header><a href="#"><img src="images/header.png" alt="header"></a></header>
+			<header><a href="index.html"><img src="images/header.png" alt="header"></a></header>
 
 			<div class="btn1"><a href="#">案例&nbsp;&nbsp;&&nbsp;&nbsp;合作伙伴</a></div>
+
 			<ul>
-				<li><a href="http://www.xmniao.com/"><img src="images/product_01.png"></a></li>
-				<li><a href="http://www.jctemai.com/"><img src="images/product_01.png"></a></li>
 				<li><a href=""><img src="images/product_01.png"></a></li>
-				<li><a href="http://www.iabroad.com/"><img src="images/product_01.png"></a></li>
+				<li><a href=""><img src="images/product_01.png"></a></li>
+				<li><a href=""><img src="images/product_01.png"></a></li>
+				<li><a href=""><img src="images/product_01.png"></a></li>
 			</ul>
+
 			<div class="bg-bottom"><img src="images/product_bg_bottom.jpg"></div>
+
 		</section>
 	</div>
-	
-
-<script>
-	window.onload = function () {
-		// alert('1');
-	}
-</script>
 
 </body>
 </html>
