--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 	<!-- 固定视口宽度为设备宽度，禁止用户缩放页面 -->
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=0">
 
+	<!-- 网站描述 -->
+	<meta name="keywords" content="玑域科技,互联网,技术,设计,策划运营,推广">
+	<meta name="description" content="玑域信息科技有限公司是一家致力于高端互联网一站式服务，为企业从传统经营模式向互联网转型提供高品质服务，涵盖界面设计、技术开发以及营销推广的策划+执行的处于高速成长期的初创型信息技术公司。">
+	<meta name="copyright" content="玑域信息科技有限公司">
+
 	<!-- 格式检测 -->
 	<meta name="format-detection" content="telephone=no,email=no,adress=no">
 
@@ -14,11 +19,12 @@
 	<meta name="apple-touch-fullscreen" content="yes">
 
 	<!-- UC强制全屏 -->
+	<meta name="screen-orientation" content="portrait"> <!-- 强制竖屏 -->
 	<meta name="full-screen" content="yes">
 	<meta name="browsermode" content="application">
 
 	<!-- QQ强制全屏 -->
-	<meta name="x5-orientation" content="portrait">
+	<meta name="x5-orientation" content="portrait"> <!-- 强制竖屏 -->
 	<meta name="x5-fullscreen" content="true">
 	<meta name="x5-page-mode" content="app">
 
@@ -73,15 +79,17 @@
 			$('.technology-02').css('bottom', 50+bigBoxWidth*2+smallBoxWidth+15);
 			$('.technology-04').css('left', bigBoxWidth+smallBoxWidth+15);
 
+			// 禁止用户拉动页面
+			document.querySelector('body').addEventListener('touchstart', function (ev) {
+				ev.preventDefault();
+			});
+			$('a').tap(function(){
+				window.location.href=this.href;
+			})
+
 		});
 
-		// 禁止用户拉动页面
-		// document.querySelector('body').addEventListener('touchstart', function (ev) {
-		// 	ev.preventDefault();
-		// });
-		// $('a').tap(function(){
-		// 	window.location.href=this.href;
-		// })
+		
 	</script>
 </body>
 </html>
