--- a/tech.html
+++ b/tech.html
@@ -6,6 +6,11 @@
 	<!-- 固定视口宽度为设备宽度，禁止用户缩放页面 -->
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=0">
 
+	<!-- 网站描述 -->
+	<meta name="keywords" content="玑域科技,互联网,技术,设计,策划运营,推广">
+	<meta name="description" content="玑域信息科技有限公司是一家致力于高端互联网一站式服务，为企业从传统经营模式向互联网转型提供高品质服务，涵盖界面设计、技术开发以及营销推广的策划+执行的处于高速成长期的初创型信息技术公司。">
+	<meta name="copyright" content="玑域信息科技有限公司">
+
 	<!-- 格式检测 -->
 	<meta name="format-detection" content="telephone=no,email=no,adress=no">
 
@@ -14,6 +19,7 @@
 	<meta name="apple-touch-fullscreen" content="yes">
 
 	<!-- UC强制全屏 -->
+	<meta name="screen-orientation" content="portrait">
 	<meta name="full-screen" content="yes">
 	<meta name="browsermode" content="application">
 
@@ -24,6 +30,7 @@
 
 	<!-- 禁止百度自动转码 -->
 	<meta http-equiv="Cache-Control" content="no-siteapp">
+
 	<title>技术</title>
 
 	<!-- css -->
@@ -104,13 +111,14 @@
 			$('#sec-02 .swiper-bg').height($wrapDiv02.width()*0.59+40);
 
 
-			var $wrapDiv03 = $('#sec-03 .swiper-bg>div');
-			$wrapDiv03.height($wrapDiv03.width()*1.8);
-			$('#sec-03 .swiper-bg').height($wrapDiv03.height()+55);
+			var sWidth = $('#sec-03 .swiper-bg>div').width();
+			$('#sec-03 .swiper-bg>div,#sec-04 .swiper-bg>div').height(sWidth*1.8);
+			var sHeight = $('#sec-03 .swiper-bg>div').height();
+			$('#sec-03 .swiper-bg,#sec-04 .swiper-bg').height(sHeight+55);
 
-			var $wrapDiv04 = $('#sec-04 .swiper-bg>div');
-			$wrapDiv04.height($wrapDiv04.width()*1.8);
-			$('#sec-04 .swiper-bg').height($wrapDiv04.height()+55);
+			// var $wrapDiv04 = $('#sec-04 .swiper-bg>div');
+			// $wrapDiv04.height($wrapDiv04.width()*1.8);
+			// $('#sec-04 .swiper-bg').height($wrapDiv04.height()+55);
 		});
 	</script>
 </body>
