--- a/design.html
+++ b/design.html
@@ -40,6 +40,7 @@
 	<link rel="stylesheet" href="style/design.css">
 </head>
 <body>
+	<div class="loading"><img src="images/loading.gif"></div>
 	<div id="design">
 		<header><a href="index.html"><img src="images/header.png" alt="header"></a></header>
 		<section id="sec-01">
@@ -104,6 +105,8 @@
 			var $wrapDiv03 = $('#sec-03 .swiper-bg>div');
 			$wrapDiv03.height($wrapDiv03.width()*1.8);
 			$('#sec-03 .swiper-bg').height($wrapDiv03.height()+55);
+
+			$('.loading').hide();
 		});
 
 	</script>
