--- a/planning.html
+++ b/planning.html
@@ -41,6 +41,7 @@
 
 </head>
 <body>
+	<div class="loading"><img src="images/loading.gif"></div>
 	<div id="planning">
 		<header><a href="index.html"><img src="images/header.png" alt="header"></a></header>
 		<section id="sec-01">
@@ -129,6 +130,8 @@
 			var $wrapDiv04 = $('#sec-04 .swiper-bg>div');
 			$wrapDiv04.height($wrapDiv04.width()*1.8);
 			$('#sec-04 .swiper-bg').height($wrapDiv04.height()+55);
+
+			$('.loading').hide();
 		});
 	</script>
 </body>
