--- a/tech.html
+++ b/tech.html
@@ -38,9 +38,17 @@
 	<link rel="stylesheet" href="style/base.css">
 	<link rel="stylesheet" href="style/swiper-3.3.0.min.css">
 	<link rel="stylesheet" href="style/tech.css">
+
 </head>
 <body>
-	<div class="loading"><img src="images/loading.gif"></div>
+	 <script>
+
+	// 	document.querySelector('body').addEventListener('touchstart', function (ev) {
+	// 		ev.preventDefault();
+	// 	});
+	// </script>
+		<div class="loading"></div>
+	<img class="loading-gif" src="images/loading.gif">
 	<div id="tech">
 		<header><a href="index.html"><img src="images/header.png" alt="header"></a></header>
 		<section id="sec-01">
@@ -117,7 +125,8 @@
 			var sHeight = $('#sec-03 .swiper-bg>div').height();
 			$('#sec-03 .swiper-bg,#sec-04 .swiper-bg').height(sHeight+55);
 
-			$('.loading').hide();
+			// $('.loading').hide();
+
 
 		});
 	</script>
