--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
 </head>
 <body>
-	<div class="loading"></div>
-	<img class="loading-gif" src="images/loading.gif">
+	<div class="loading"><img class="loading-gif" src="images/loading.gif"></div>
+
 	<div id="wrapper">
 		<section id="section1">
 
