--- a/planning.html
+++ b/planning.html
@@ -39,6 +39,12 @@
 	<link rel="stylesheet" href="style/swiper-3.3.0.min.css">
 	<link rel="stylesheet" href="style/planning.css">
 
+	<script>
+		HTML = document.getElementsByTagName('html')[0];
+		HTML.style.height = '100%';
+		HTML.style.overflow = 'hidden';
+	</script>
+
 </head>
 <body>
 	<div class="loading"><img src="images/loading.gif"></div>
@@ -131,7 +137,11 @@
 			$wrapDiv04.height($wrapDiv04.width()*1.8);
 			$('#sec-04 .swiper-bg').height($wrapDiv04.height()+55);
 
-			$('.loading').hide();
+			setTimeout(function(){
+				$('.loading,.loading-gif').fadeOut(700);
+				$('html').height('auto').css('overflow', 'auto');
+			},2000);
+
 		});
 	</script>
 </body>
