--- a/tech.html
+++ b/tech.html
@@ -39,14 +39,14 @@
 	<link rel="stylesheet" href="style/swiper-3.3.0.min.css">
 	<link rel="stylesheet" href="style/tech.css">
 	<script>
-		document.querySelector('html').style.height = '100%';
-		document.querySelector('html').style.overflow = 'hidden';
+		HTML = document.getElementsByTagName('html')[0];
+		HTML.style.height = '100%';
+		HTML.style.overflow = 'hidden';
 	</script>
 
 </head>
 <body>
 	<div class="loading"><img class="loading-gif" src="images/loading.gif"></div>
-	
 	<div id="tech">
 		<header><a href="index.html"><img src="images/header.png" alt="header"></a></header>
 		<section id="sec-01">
@@ -126,9 +126,7 @@
 			setTimeout(function(){
 				$('.loading,.loading-gif').fadeOut(700);
 				$('html').height('auto').css('overflow', 'auto');
-			},1000);
-
-
+			},1600);
 
 
 		});
