--- a/design.html
+++ b/design.html
@@ -46,7 +46,7 @@
 	</script>
 </head>
 <body>
-	<div class="loading"><img src="images/loading.gif"></div>
+	<div class="loading"><img class="loading-gif" src="images/loading.gif"></div>
 	<div id="design">
 		<header><a href="index.html"><img src="images/header.png" alt="header"></a></header>
 		<section id="sec-01">
