--- a/product.html
+++ b/product.html
@@ -38,16 +38,12 @@
 	<link rel="stylesheet" href="style/base.css">
 	<link rel="stylesheet" href="style/product.css">
 
-	<script>
-		HTML = document.getElementsByTagName('html')[0];
-		HTML.style.height = '100%';
-		HTML.style.overflow = 'hidden';
-	</script>
+
 
 </head>
 
 <body>
-	<div class="loading"><img src="images/loading.gif"></div>
+	<div class="loading"><img class="loading-gif" src="images/loading.gif"></div>
 	<div id="wrapper">
 		<section id="section1">
 
