--- a/planning.html
+++ b/planning.html
@@ -47,7 +47,7 @@
 
 </head>
 <body>
-	<div class="loading"><img src="images/loading.gif"></div>
+	<div class="loading"><img class="loading-gif" src="images/loading.gif"></div>
 	<div id="planning">
 		<header><a href="index.html"><img src="images/header.png" alt="header"></a></header>
 		<section id="sec-01">
