--- a/design.html
+++ b/design.html
@@ -65,8 +65,8 @@
 					<div class="swiper-container" id="swiper-02">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide"><img src="images/design_sec03_01.jpg"></div>
-							<div class="swiper-slide">Slide 2</div>
-							<div class="swiper-slide">Slide 3</div>
+							<div class="swiper-slide"><img src="images/design_sec03_02.jpg"></div>
+							<div class="swiper-slide"><img src="images/design_sec03_03.jpg"></div>
 						</div>
 					</div>
 				</div>
@@ -82,8 +82,8 @@
 					<div class="swiper-container" id="swiper-01">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide"><img src="images/design_sec02_01.jpg"></div>
-							<div class="swiper-slide">Slide 2</div>
-							<div class="swiper-slide">Slide 3</div>
+							<div class="swiper-slide"><img src="images/design_sec02_02.jpg"></div>
+							<div class="swiper-slide"><img src="images/design_sec02_03.jpg"></div>
 						</div>
 					</div>
 				</div>
@@ -102,7 +102,9 @@
 
 		$(function() {
 			var mySwiper = new Swiper ('.swiper-container', {
-				loop: true
+				loop: true,
+				autoplay: 5000,
+				speed: 500
 			});
 			var $wrapDiv02 = $('#sec-02 .swiper-bg>div');
 			$wrapDiv02.height($wrapDiv02.width()*0.58);
