--- a/planning.html
+++ b/planning.html
@@ -74,8 +74,8 @@
 					<div class="swiper-container" id="swiper-02">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide"><img src="images/planning_sec03_01.jpg"></div>
-							<div class="swiper-slide">Slide 2</div>
-							<div class="swiper-slide">Slide 3</div>
+							<div class="swiper-slide"><img src="images/planning_sec03_02.jpg"></div>
+							<div class="swiper-slide"><img src="images/planning_sec03_03.jpg"></div>
 						</div>
 					</div>
 				</div>
@@ -90,8 +90,6 @@
 					<div class="swiper-container" id="swiper-01">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide"><img src="images/planning_sec02_01.jpg"></div>
-							<div class="swiper-slide">Slide 2</div>
-							<div class="swiper-slide">Slide 3</div>
 						</div>
 					</div>
 				</div>
@@ -106,8 +104,6 @@
 					<div class="swiper-container" id="swiper-03">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide"><img src="images/planning_sec04_01.jpg"></div>
-							<div class="swiper-slide">Slide 2</div>
-							<div class="swiper-slide">Slide 3</div>
 						</div>
 					</div>
 				</div>
@@ -122,8 +118,10 @@
 	<script src="scripts/swiper-3.3.0.jquery.min.js"></script>
 	<script>
 		$(function() {
-			var mySwiper = new Swiper ('.swiper-container', {
-				loop: true
+			var mySwiper = new Swiper ('#sec-03 .swiper-container', {
+				loop: true,
+				autoplay: 5000,
+				speed: 500
 			});
 			var $wrapDiv02 = $('#sec-02 .swiper-bg>div');
 			$wrapDiv02.height($wrapDiv02.width()*0.58);
