--- a/tech.html
+++ b/tech.html
@@ -64,8 +64,8 @@
 					<div class="swiper-container" id="swiper-01">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide"><img src="images/tech_sec02_01.jpg"></div>
-							<div class="swiper-slide">Slide 2</div>
-							<div class="swiper-slide">Slide 3</div>
+							<div class="swiper-slide"><img src="images/tech_sec02_02.jpg"></div>
+							<div class="swiper-slide"><img src="images/tech_sec02_03.jpg"></div>
 						</div>
 					</div>
 				</div>
@@ -79,8 +79,8 @@
 					<div class="swiper-container" id="swiper-02">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide"><img src="images/tech_sec03_01.jpg"></div>
-							<div class="swiper-slide">Slide 2</div>
-							<div class="swiper-slide">Slide 3</div>
+							<div class="swiper-slide"><img src="images/tech_sec03_02.jpg"></div>
+							<div class="swiper-slide"><img src="images/tech_sec03_03.jpg"></div>
 						</div>
 					</div>
 				</div>
@@ -94,8 +94,8 @@
 					<div class="swiper-container" id="swiper-03">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide"><img src="images/tech_sec04_01.jpg"></div>
-							<div class="swiper-slide">Slide 2</div>
-							<div class="swiper-slide">Slide 3</div>
+							<div class="swiper-slide"><img src="images/tech_sec04_02.jpg"></div>
+							<div class="swiper-slide"><img src="images/tech_sec04_03.jpg"></div>
 						</div>
 					</div>
 				</div>
@@ -112,8 +112,12 @@
 
 		$(function() {
 			var mySwiper = new Swiper ('.swiper-container', {
-				loop: true
+				loop: true,
+				autoplay: 5000,
+				speed: 500
 			});
+
+
 			var $wrapDiv02 = $('#sec-02 .swiper-bg>div');
 			$wrapDiv02.height($wrapDiv02.width()*0.58);
 			$('#sec-02 .swiper-bg').height($wrapDiv02.width()*0.58+40);
