--- a/tech.html
+++ b/tech.html
@@ -114,7 +114,8 @@
 			var mySwiper = new Swiper ('.swiper-container', {
 				loop: true,
 				autoplay: 5000,
-				speed: 500
+				speed: 500,
+				autoplayDisableOnInteraction: false;
 			});
 
 
