--- a/planning.html
+++ b/planning.html
@@ -122,7 +122,7 @@
 				loop: true,
 				autoplay: 5000,
 				speed: 500,
-				autoplayDisableOnInteraction: false;
+				autoplayDisableOnInteraction: false
 			});
 			var $wrapDiv02 = $('#sec-02 .swiper-bg>div');
 			$wrapDiv02.height($wrapDiv02.width()*0.58);
