--- a/tech.html
+++ b/tech.html
@@ -115,7 +115,7 @@
 				loop: true,
 				autoplay: 5000,
 				speed: 500,
-				autoplayDisableOnInteraction: false;
+				autoplayDisableOnInteraction: false
 			});
 
 
