--- a/planning.html
+++ b/planning.html
@@ -117,7 +117,7 @@
 	<script src="scripts/zepto.min.js"></script>
 	<script src="scripts/swiper-3.3.0.jquery.min.js"></script>
 	<script>
-		$(function() {
+		window.onload = function() {
 			var mySwiper = new Swiper ('#sec-03 .swiper-container', {
 				loop: true,
 				autoplay: 5000,
@@ -141,7 +141,7 @@
 				$('html').height('auto').css('overflow', 'auto');
 			},1600);
 
-		});
+		};
 	</script>
 </body>
 </html>
