--- a/product.html
+++ b/product.html
@@ -64,7 +64,7 @@
 	</div>
 	<script src="scripts/zepto.min.js"></script>
 	<script>
-		$(function() {
+		window.onload = function() {
 			// 禁止用户拉动页面
 			document.querySelector('body').addEventListener('touchstart', function (ev) {
 				ev.preventDefault();
@@ -78,7 +78,7 @@
 				$('html').height('auto').css('overflow', 'auto');
 			},1600);
 
-		});
+		};
 	</script>
 </body>
 </html>
