--- a/tech.html
+++ b/tech.html
@@ -110,7 +110,7 @@
 	<script src="scripts/swiper-3.3.0.jquery.min.js"></script>
 	<script>
 
-		$(function() {
+		window.onload = function() {
 			var mySwiper = new Swiper ('.swiper-container', {
 				loop: true,
 				autoplay: 5000,
@@ -134,7 +134,7 @@
 			},1600);
 
 
-		});
+		};
 	</script>
 </body>
 </html>
