--- a/tech.html
+++ b/tech.html
@@ -38,15 +38,12 @@
 	<link rel="stylesheet" href="style/base.css">
 	<link rel="stylesheet" href="style/swiper-3.3.0.min.css">
 	<link rel="stylesheet" href="style/tech.css">
-	<script>
-		HTML = document.getElementsByTagName('html')[0];
-		HTML.style.height = '100%';
-		HTML.style.overflow = 'hidden';
-	</script>
 
 </head>
 <body>
-	<div class="loading"><img class="loading-gif" src="images/loading.gif"></div>
+	<div class="loading">
+		<img class="loading-gif" src="images/loading.gif">
+	</div>
 	<div id="tech">
 		<header><a href="index.html"><img src="images/header.png" alt="header"></a></header>
 		<section id="sec-01">
