--- a/design.html
+++ b/design.html
@@ -39,11 +39,6 @@
 	<link rel="stylesheet" href="style/swiper-3.3.0.min.css">
 	<link rel="stylesheet" href="style/design.css">
 
-	<script>
-		HTML = document.getElementsByTagName('html')[0];
-		HTML.style.height = '100%';
-		HTML.style.overflow = 'hidden';
-	</script>
 </head>
 <body>
 	<div class="loading"><img class="loading-gif" src="images/loading.gif"></div>
@@ -101,6 +96,7 @@
 	<script>
 
 		window.onload = function() {
+			$('#design').show();
 			var mySwiper = new Swiper ('.swiper-container', {
 				loop: true,
 				autoplay: 5000,
@@ -115,9 +111,11 @@
 			$wrapDiv03.height($wrapDiv03.width()*1.8);
 			$('#sec-03 .swiper-bg').height($wrapDiv03.height()+55);
 
+
 			setTimeout(function(){
 				$('.loading,.loading-gif').fadeOut(700);
-				$('html').height('auto').css('overflow', 'auto');
+				// $('html').height('auto').css('overflow', 'auto');
+				alert('nihao');
 			},1600);
 
 		};
