--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 
 		window.onload = function() {
 
+			$('#wrapper').show();
 			var bigBoxWidth = $('.bigbox').width();
 			var smallBoxWidth = (bigBoxWidth-5)/2;
 			$('.bigbox').height(bigBoxWidth);
