--- a/planning.html
+++ b/planning.html
@@ -118,6 +118,7 @@
 	<script src="scripts/swiper-3.3.0.jquery.min.js"></script>
 	<script>
 		window.onload = function() {
+			$('#planning').show();
 			var mySwiper = new Swiper ('#sec-03 .swiper-container', {
 				loop: true,
 				autoplay: 5000,
