--- a/product.html
+++ b/product.html
@@ -65,6 +65,7 @@
 	<script src="scripts/zepto.min.js"></script>
 	<script>
 		window.onload = function() {
+			$('#wrapper').show();
 			// 禁止用户拉动页面
 			document.querySelector('body').addEventListener('touchstart', function (ev) {
 				ev.preventDefault();
