--- a/tech.html
+++ b/tech.html
@@ -108,6 +108,8 @@
 	<script>
 
 		window.onload = function() {
+			$('#tech').show();
+
 			var mySwiper = new Swiper ('.swiper-container', {
 				loop: true,
 				autoplay: 5000,
@@ -127,7 +129,7 @@
 
 			setTimeout(function(){
 				$('.loading,.loading-gif').fadeOut(700);
-				$('html').height('auto').css('overflow', 'auto');
+				// $('html').height('auto').css('overflow', 'auto');
 			},1600);
 
 
