--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
 				<p>创意 · 设计 · 开发</p>
 			</div>
 
-			<div class="technology-01 bigbox"><a href="tech.html"><span>技术</span><img src="images/technology.png" alt="技术"></a></div>
-			<div class="technology-02 smallbox"><a href="tech.html#sec-04"><img src="images/wechat.png" alt="微信"></a></div>
-			<div class="technology-03 smallbox"><a href="tech.html#sec-02"><span>Web</span></a></div>
-			<div class="technology-04 smallbox"><a href="tech.html#sec-03"><span>App</span></a></div>
+			<div class="technology-01 bigbox technology"><a href="tech.html"><span>技术</span><img src="images/technology.png" alt="技术"></a></div>
+			<div class="technology-02 smallbox technology"><a href="tech.html#sec-04"><img src="images/wechat.png" alt="微信"></a></div>
+			<div class="technology-03 smallbox technology"><a href="tech.html#sec-02"><span>Web</span></a></div>
+			<div class="technology-04 smallbox technology"><a href="tech.html#sec-03"><span>App</span></a></div>
 			<div class="design-01 bigbox"><a href="design.html"><span>设计</span><img src="images/design.png" alt="设计"></a></div>
-			<div class="planning-01 bigbox"><a href="planning.html"><span>策划运营</span><img src="images/planning.png" alt="策划"></a></div>
-			<div class="planning-02 smallbox"><a href="planning.html#sec-03"><span>运营</span></a></div>
-			<div class="planning-03 smallbox"><a href="planning.html#sec-02"><span>推广</span></a></div>
+			<div class="planning-01 bigbox planning"><a href="planning.html"><span>策划运营</span><img src="images/planning.png" alt="策划"></a></div>
+			<div class="planning-02 smallbox planning"><a href="planning.html#sec-03"><span>运营</span></a></div>
+			<div class="planning-03 smallbox planning"><a href="planning.html#sec-02"><span>推广</span></a></div>
 
 			<footer><a href="product.html">案例 & 合作伙伴<span></span></a></footer>
 
@@ -96,6 +96,32 @@
 			setTimeout(function(){
 				$('.loading,.loading-gif').fadeOut(700);
 			},2000);
+
+
+			setTimeout(function(){
+				setInterval(function(){
+					$('.technology').fadeOut(2000, function() {
+						$(this).fadeIn(2000);
+					});
+				},6000);
+			},100);
+
+
+			setTimeout(function(){
+				setInterval(function(){
+					$('.design-01').fadeOut(2000, function() {
+						$(this).fadeIn(2000);
+					});
+				},6000);
+			},700);
+
+			setTimeout(function(){
+				setInterval(function(){
+					$('.planning').fadeOut(2000, function() {
+						$(this).fadeIn(2000);
+					});
+				},6000);
+			},1300);
 		};
 		
 	</script>
