--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
 
 
 			setTimeout(function(){
+				$('.technology').fadeOut(2000, function() {
+					$(this).fadeIn(2000);
+				});
 				setInterval(function(){
 					$('.technology').fadeOut(2000, function() {
 						$(this).fadeIn(2000);
@@ -108,6 +111,9 @@
 
 
 			setTimeout(function(){
+				$('.design-01').fadeOut(2000, function() {
+					$(this).fadeIn(2000);
+				});
 				setInterval(function(){
 					$('.design-01').fadeOut(2000, function() {
 						$(this).fadeIn(2000);
@@ -116,6 +122,9 @@
 			},700);
 
 			setTimeout(function(){
+				$('.planning').fadeOut(2000, function() {
+					$(this).fadeIn(2000);
+				});
 				setInterval(function(){
 					$('.planning').fadeOut(2000, function() {
 						$(this).fadeIn(2000);
