--- a/index.html
+++ b/index.html
@@ -98,40 +98,62 @@
 			},2000);
 
 
+			// setTimeout(function(){
+			// 	$('.technology').fadeOut(2000, function() {
+			// 		setTimeout(function(){$('.technology').fadeIn(2000);},500)
+			// 	});
+			// 	setInterval(function(){
+			// 		$('.technology').fadeOut(2000, function() {
+			// 			setTimeout(function(){$('.technology').fadeIn(2000);},500)
+			// 		});
+			// 	},6000);
+			// },100);
+
+
+			// setTimeout(function(){
+			// 	$('.design-01').fadeOut(2000, function() {
+			// 		setTimeout(function(){$('.design-01').fadeIn(2000);},500)
+			// 	});
+			// 	setInterval(function(){
+			// 		$('.design-01').fadeOut(2000, function() {
+			// 			setTimeout(function(){$('.design-01').fadeIn(2000);},500)
+			// 		});
+			// 	},6000);
+			// },1300);
+
+			// setTimeout(function(){
+			// 	$('.planning').fadeOut(2000, function() {
+			// 		setTimeout(function(){$('.planning').fadeIn(2000);},500)
+			// 	});
+			// 	setInterval(function(){
+			// 		$('.planning').fadeOut(2000, function() {
+			// 			setTimeout(function(){$('.planning').fadeIn(2000);},500)
+			// 		});
+			// 	},6000);
+			// },2500);
+
 			setTimeout(function(){
-				$('.technology').fadeOut(2000, function() {
-					setTimeout(function(){$('.technology').fadeIn(2000);},500)
-				});
-				setInterval(function(){
-					$('.technology').fadeOut(2000, function() {
-						setTimeout(function(){$('.technology').fadeIn(2000);},500)
-					});
-				},6000);
+				secFadeAnimate('.technology');
 			},100);
-
-
 			setTimeout(function(){
-				$('.design-01').fadeOut(2000, function() {
-					setTimeout(function(){$('.design-01').fadeIn(2000);},500)
-				});
-				setInterval(function(){
-					$('.design-01').fadeOut(2000, function() {
-						setTimeout(function(){$('.design-01').fadeIn(2000);},500)
-					});
-				},6000);
+				secFadeAnimate('.design-01');
 			},1300);
-
 			setTimeout(function(){
-				$('.planning').fadeOut(2000, function() {
-						setTimeout(function(){$('.planning').fadeIn(2000);},500)
-				});
-				setInterval(function(){
-					$('.planning').fadeOut(2000, function() {
-						setTimeout(function(){$('.planning').fadeIn(2000);},500)
-					});
-				},6000);
+				secFadeAnimate('.planning');
 			},2500);
 		};
+
+
+		function secFadeAnimate(sec) {
+			$(sec).fadeOut(2000, function() {
+				setTimeout(function(){$(sec).fadeIn(2000);},500)
+			});
+			setInterval(function(){
+				$(sec).fadeOut(2000, function() {
+					setTimeout(function(){$(sec).fadeIn(2000);},500)
+				});
+			},6000);
+		}
 		
 	</script>
 </body>
