--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
 		<div class="swiper-wrapper">
 			<div class="swiper-slide slide1">
-				<div class="p1-bg ani" swiper-animate-effect="fadeIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s"></div>
-				<img src="images/page1-words.png" alt="素影、繁花" class="p1-word ani" swiper-animate-effect="lightSpeedIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.6s">
+				<div class="p1-bg ani" swiper-animate-effect="fadeIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.8s"></div>
+				<img src="images/page1-words.png" alt="素影、繁花" class="p1-word ani" swiper-animate-effect="slideInDown" swiper-animate-duration="0.8s" swiper-animate-delay="1.3s">
 			</div>
 			<div class="swiper-slide slide2">
 				<div class="slide2-wrap">
