--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 		<div class="swiper-wrapper">
 			<div class="swiper-slide slide1">
 				<div class="p1-bg ani" swiper-animate-effect="fadeIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.8s"></div>
-				<img src="images/page1-words.png" alt="素影、繁花" class="p1-word ani" swiper-animate-effect="slideInDown" swiper-animate-duration="0.8s" swiper-animate-delay="1.3s">
+				<img src="images/page1-words.png" alt="素影、繁花" class="p1-word ani" swiper-animate-effect="zoomIn" swiper-animate-duration="1s" swiper-animate-delay="1.5s">
 			</div>
 			<div class="swiper-slide slide2">
 				<div class="slide2-wrap">
-					<img src="images/page2-words.png" class="p2-word">
-					<img src="images/page2-words2.png" class="p2-word2">
+					<img src="images/page2-words.png" class="p2-word ani" swiper-animate-effect="rollIn" swiper-animate-duration="1s" swiper-animate-delay="0.3s">
+					<img src="images/page2-words2.png" class="p2-word2 ani" swiper-animate-effect="slideInUp" swiper-animate-duration="1s" swiper-animate-delay="1.3s">
 				</div>
 			</div>
 			<div class="swiper-slide slide3">
@@ -70,18 +70,20 @@
 	<script src="js/swiper-3.3.1.jquery.min.js"></script>
 	<script src="js/swiper.animate1.0.2.min.js"></script>
 	<script>        
-		var mySwiper = new Swiper ('.swiper-container', {
-			direction: 'vertical',
-			width: window.innerWidth,
-			height: window.innerHeight,
+		window.onload = function(){
+			var mySwiper = new Swiper ('.swiper-container', {
+				direction: 'vertical',
+				width: window.innerWidth,
+				height: window.innerHeight,
 			onInit: function(swiper){ //Swiper2.x的初始化是onFirstInit
     			swiperAnimateCache(swiper); //隐藏动画元素 
     			swiperAnimate(swiper); //初始化完成开始动画
-			}, 
-			onSlideChangeEnd: function(swiper){ 
+    		}, 
+    		onSlideChangeEnd: function(swiper){ 
     			swiperAnimate(swiper); //每个slide切换结束时也运行当前slide动画
-			} 
-		})        
+    		} 
+    	}) 
+		}       
 	</script>
 </body>
 </html>
