--- a/index.html
+++ b/index.html
@@ -30,14 +30,18 @@
 			<div class="swiper-slide slide2">
 				<div class="slide2-wrap">
 					<img src="images/page2-words.png" class="p2-word ani" swiper-animate-effect="rollIn" swiper-animate-duration="1s" swiper-animate-delay="0.3s">
-					<img src="images/page2-words2.png" class="p2-word2 ani" swiper-animate-effect="slideInUp" swiper-animate-duration="1s" swiper-animate-delay="1.3s">
+					<div>
+						<img src="images/page2-words2.png" class="p2-word2 ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="1.3s">
+						<img src="images/page2-words3.png" class="p2-Word3 ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="1s" swiper-animate-delay="3.7s">
+					</div>
+
 				</div>
 			</div>
 			<div class="swiper-slide slide3">
-				<img src="images/page3-avatar.gif" class="avatar">
+				<img src="images/page3-avatar.png" class="avatar ani" swiper-animate-effect="rotateIn" swiper-animate-duration="1.5s" swiper-animate-delay="2.6s">
 				<div class="word">
-					<img src="images/page3-name.png">
-					<img src="images/page3-para.png">
+					<img src="images/page3-name.png" class="ani" swiper-animate-effect="zoomInDown" swiper-animate-duration="1.5s" swiper-animate-delay="1s">
+					<img src="images/page3-para.png" class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="0.5s">
 				</div>
 			</div>
 			<div class="swiper-slide slide4">
@@ -81,7 +85,16 @@
     		}, 
     		onSlideChangeEnd: function(swiper){ 
     			swiperAnimate(swiper); //每个slide切换结束时也运行当前slide动画
-    		} 
+    			if (swiper.activeIndex == 1) {
+    				setTimeout(function(){
+
+    					$('.p2-word2').addClass('fadeOut');
+    				},2500)
+    			}
+    		},
+    		onSlideChangeStart: function(swiper){
+    			$('.p2-word2').removeClass('fadeOut');
+    		}
     	}) 
 		}       
 	</script>
