--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 			</div>
 			<div class="swiper-slide slide2">
 				<div class="slide2-wrap">
-					<img src="images/page2-words.png" class="p2-word ani" swiper-animate-effect="rollIn" swiper-animate-duration="1s" swiper-animate-delay="0.3s">
+					<img src="images/page2-words.png" class="p2-word ani" swiper-animate-effect="rollIn" swiper-animate-duration="1s" swiper-animate-delay="0.1s">
 					<div>
 						<img src="images/page2-words2.png" class="p2-word2 ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="1.3s">
-						<img src="images/page2-words3.png" class="p2-Word3 ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="1s" swiper-animate-delay="3.7s">
+						<img src="images/page2-words3.png" class="p2-Word3 ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="1s" swiper-animate-delay="3.4s">
 					</div>
 
 				</div>
@@ -45,10 +45,10 @@
 				</div>
 			</div>
 			<div class="swiper-slide slide4">
-				<img src="images/page4-avatar.gif" class="avatar">
+				<img src="images/page4-avatar.png" class="avatar ani" swiper-animate-effect="rotateIn" swiper-animate-duration="1.5s" swiper-animate-delay="2.6s">
 				<div class="word">
-					<img src="images/page4-name.png">
-					<img src="images/page4-para.png">
+					<img src="images/page4-name.png" class="ani" swiper-animate-effect="zoomInDown" swiper-animate-duration="1.5s" swiper-animate-delay="1s">
+					<img src="images/page4-para.png" class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="0.5s">
 				</div>
 			</div>
 			<div class="swiper-slide slide5">
@@ -89,7 +89,7 @@
     				setTimeout(function(){
 
     					$('.p2-word2').addClass('fadeOut');
-    				},2500)
+    				},2000)
     			}
     		},
     		onSlideChangeStart: function(swiper){
