--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 			<div class="swiper-slide slide1">
 				<div class="p1-bg ani" swiper-animate-effect="fadeIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.8s"></div>
 				<img src="images/page1-words.png" alt="素影、繁花" class="p1-word ani" swiper-animate-effect="zoomIn" swiper-animate-duration="1s" swiper-animate-delay="1.5s">
+				<div class="u-arrow-bottom">
+					<img src="images/arrow.png">
+				</div>
 			</div>
 			<div class="swiper-slide slide2">
 				<div class="slide2-wrap">
@@ -36,12 +39,18 @@
 					</div>
 
 				</div>
+				<div class="u-arrow-bottom">
+					<img src="images/arrow.png">
+				</div>
 			</div>
 			<div class="swiper-slide slide3">
 				<img src="images/page3-avatar.png" class="avatar ani" swiper-animate-effect="rotateIn" swiper-animate-duration="1.5s" swiper-animate-delay="2.6s">
 				<div class="word">
 					<img src="images/page3-name.png" class="ani" swiper-animate-effect="zoomInDown" swiper-animate-duration="1.5s" swiper-animate-delay="1s">
 					<img src="images/page3-para.png" class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="0.5s">
+				</div>
+				<div class="u-arrow-bottom">
+					<img src="images/arrow.png">
 				</div>
 			</div>
 			<div class="swiper-slide slide4">
@@ -50,20 +59,26 @@
 					<img src="images/page4-name.png" class="ani" swiper-animate-effect="zoomInDown" swiper-animate-duration="1.5s" swiper-animate-delay="1s">
 					<img src="images/page4-para.png" class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="0.5s">
 				</div>
+				<div class="u-arrow-bottom">
+					<img src="images/arrow.png">
+				</div>
 			</div>
 			<div class="swiper-slide slide5">
-				<div>
-					<img src="images/page5-title.png">
-					<img src="images/page5-para1.png">
-					<img src="images/page5-para2.png">
-					<img src="images/page5-para3.png">
+				<div class="wordwrap">
+					<img src="images/page5-title.png" class="ani" swiper-animate-effect="zoomIn" swiper-animate-duration="1.5s" swiper-animate-delay="0.3s">
+					<img src="images/page5-para1.png" class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="1.6s">
+					<img src="images/page5-para2.png" class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="2.4s">
+					<img src="images/page5-para3.png" class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="3.2s">
+				</div>
+				<div class="u-arrow-bottom">
+					<img src="images/arrow.png">
 				</div>
 			</div>
 			<div class="swiper-slide slide6">
 				<div>
-					<img src="images/page6-para1.png">
-					<img src="images/page6-para2.png">
-					<img src="images/page6-para3.png">
+					<img src="images/page6-para1.png" class="ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="1s" swiper-animate-delay="0.3s">
+					<img src="images/page6-para2.png" class="ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="1s" swiper-animate-delay="1.1s">
+					<img src="images/page6-para3.png" class="ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="1s" swiper-animate-delay="1.9s">
 				</div>
 			</div>
 		</div>
@@ -79,6 +94,8 @@
 				direction: 'vertical',
 				width: window.innerWidth,
 				height: window.innerHeight,
+				hashnav: true,
+				speed: 600,
 			onInit: function(swiper){ //Swiper2.x的初始化是onFirstInit
     			swiperAnimateCache(swiper); //隐藏动画元素 
     			swiperAnimate(swiper); //初始化完成开始动画
