--- a/index.html
+++ b/index.html
@@ -32,10 +32,14 @@
 			</div>
 			<div class="swiper-slide slide2">
 				<div class="slide2-wrap">
-					<img src="images/page2-words.png" class="p2-word ani" swiper-animate-effect="rollIn" swiper-animate-duration="1s" swiper-animate-delay="0.1s">
 					<div>
-						<img src="images/page2-words2.png" class="p2-word2 ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="1.3s">
-						<img src="images/page2-words3.png" class="p2-Word3 ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="1s" swiper-animate-delay="3.4s">
+						<img src="images/page2-bg1.jpg">
+						<!-- 						<img src="images/page2-words.png" class="p2-word ani" swiper-animate-effect="rollIn" swiper-animate-duration="1s" swiper-animate-delay="0.1s"> -->
+					</div>
+					<div>
+						<img src="images/page2-bg2.jpg">
+<!-- 						<img src="images/page2-words2.png" class="p2-word2 ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="1.3s">
+						<img src="images/page2-words3.png" class="p2-Word3 ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="1s" swiper-animate-delay="3.4s"> -->
 					</div>
 
 				</div>
