--- a/index.html
+++ b/index.html
@@ -109,12 +109,14 @@
 	    			setTimeout(function(){
 
 	    				$('.p2-word2').css({
+	    					'animation-duration':'1s',
+	    					'-webkit-animation-duration':'1s',
 	    					'animation-delay': '0.3s',
 	    					'-webkit-animation-delay': '0.3s'
 	    				}).addClass('fadeOut');
 	    			},3000)
     			}
-    			alert('1');
+    			alert('2');
     			swiperAnimate(swiper); //每个slide切换结束时也运行当前slide动画
 
 
