--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 				<img src="images/page3-bg.png" class="p3-bg">
 				<img src="images/page3-name.png" class="p3-name ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="1.5s" swiper-animate-delay="3s">
 				<img src="images/page3-para.png" class="p3-para ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1.5s" swiper-animate-delay="3.8s">
+				<!-- <img src="images/page3-name.png" class="test"> -->
 				<div class="u-arrow-bottom">
 					<img src="images/arrow.png">
 				</div>
